--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,7 @@
 @use "elements/game_card/editions";
 @use "elements/game_card/information";
 @use "elements/game_card/similar";
+@use "elements/game_card/fullScreen";
 @use "elements/profile/profile";
 @use "elements/profile/settings";
 @use "elements/profile/more";
