--- a/scss/elements/game_card/_mainInfo.scss
+++ b/scss/elements/game_card/_mainInfo.scss
@@ -93,25 +93,91 @@
                 bottom: 0px;
                 left: 0px;
                 right: 0px;
-                overflow-y: auto;
+                // overflow-y: auto;
                 background: linear-gradient(to top, rgba(0, 0, 0, .5), transparent);
                 opacity: 0;
                 transform: translateY(20px);
                 transition: .2s;
-                &::-webkit-scrollbar {
-                    height: 10px;
+                &__scroll {
+                    overflow-y: auto;
+                    width: 100%;
+                    &::-webkit-scrollbar {
+                        height: 10px;
+                    }
+                    &::-webkit-scrollbar-track {
+                        background: rgba(92, 92, 92, 0.8); /* Цвет фона трека */
+                    }
+                    &::-webkit-scrollbar-thumb {
+                        background: rgba(255, 255, 255, .2); /* Цвет ползунка */
+                        border-radius: 10px;
+                        &:hover {
+                            background: rgba(255, 255, 255, .2);
+                        }
+                    }
                 }
-                &::-webkit-scrollbar-track {
-                    background: rgba(92, 92, 92, 0.8); /* Цвет фона трека */
-                    // border-radius: 10px;
-                    // margin-left: 10px;
-                    // margin-right: 10px;
-                }
-                &::-webkit-scrollbar-thumb {
-                    background: rgba(255, 255, 255, .2); /* Цвет ползунка */
-                    border-radius: 10px;
-                    &:hover {
-                        background: rgba(255, 255, 255, .2);
+                &__screenshotsIF {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    padding-left: 10px;
+                    padding-right: 10px;
+                    margin-bottom: 10px;
+                    &__arrows {
+                        display: flex;
+                        gap: 7px;
+                        &__arrow {
+                            width: 35px;
+                            height: 35px;
+                            padding: 10px;
+                            background-color: rgba(255, 255, 255, 0.1);
+                            -webkit-backdrop-filter: blur(3px);
+                            backdrop-filter: blur(3px);
+                            border-radius: 50%;
+                            transition: .15s;
+                            cursor: pointer;
+                            @include base.style-main_click;
+                            & > img {
+                                width: 100%;
+                                filter: invert(1);
+                            }
+                            &:nth-child(1) img {
+                                transform: rotate(180deg) translateX(1px);
+                            }
+                            &:nth-child(2) img {
+                                transform: translateX(1px);
+                            }
+                            &:active {
+                                transform: scale(0.95);
+                            }
+                            &_disactive {
+                                cursor: default;
+                                opacity: 0.5;
+                                &:hover {
+                                    @include base.style-main;
+                                }
+                                &:active {
+                                    transform: scale(1);
+                                }
+                            }
+                        }
+                    }
+                    &__buttonFullScreenBlock {
+                        &__button {
+                            height: 35px;
+                            width: 35px;
+                            padding: 8px;
+                            background-color: rgba(255, 255, 255, 0.1);
+                            -webkit-backdrop-filter: blur(3px);
+                            backdrop-filter: blur(3px);
+                            border-radius: 50%;
+                            transition: .15s;
+                            cursor: pointer;
+                            @include base.style-main_click;
+                            & > svg {
+                                width: 100%;
+                                height: 100%;
+                            }
+                        }
                     }
                 }
                 &__medialist {
