--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,6 +21,7 @@
 @use "elements/game_card/information";
 @use "elements/game_card/similar";
 @use "elements/game_card/fullScreen";
+@use "elements/game_card/videoIF";
 @use "elements/profile/profile";
 @use "elements/profile/settings";
 @use "elements/profile/more";
