--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,16 @@ label {
     transform: translateY(0px);
   }
 }
+@keyframes open_invert {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
 @keyframes open_catalog_header {
   0% {
     opacity: 0;
@@ -1656,8 +1666,9 @@ label {
   gap: 0px;
 }
 .banner__game__interaction__info__shopInfo__priceTag__prices__newPrice {
-  font-size: 22px;
+  font-size: 26px;
   font-weight: 700;
+  margin-top: -2px;
 }
 .banner__game__interaction__info__shopInfo__priceTag__prices__oldPrice {
   font-size: 16px;
@@ -2031,6 +2042,7 @@ label {
   z-index: 1;
   height: 100%;
   width: 100%;
+  background-color: rgb(0, 0, 0);
 }
 .mainInfo__banner__visual__imgBlock {
   width: 100%;
@@ -2038,6 +2050,13 @@ label {
   background-size: cover; /* или contain */
   background-position: center;
   background-repeat: no-repeat;
+}
+.mainInfo__banner__visual > video {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
 }
 .mainInfo__banner__interface {
   position: absolute;
@@ -2057,6 +2076,7 @@ label {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  transition: 0.2s;
 }
 .mainInfo__banner__interface__top__rating {
   display: flex;
@@ -2086,6 +2106,10 @@ label {
 }
 .mainInfo__banner__interface__top__point__key {
   font-weight: 700;
+}
+.mainInfo__banner__interface__top_hidden {
+  opacity: 0;
+  transform: translateY(-10px);
 }
 .mainInfo__banner__interface__bottom {
   position: absolute;
@@ -2121,6 +2145,7 @@ label {
   padding-left: 10px;
   padding-right: 10px;
   margin-bottom: 10px;
+  animation: open_invert 0.25s cubic-bezier(0, 0, 0, 0.75) 1;
 }
 .mainInfo__banner__interface__bottom__screenshotsIF__arrows {
   display: flex;
@@ -2201,6 +2226,9 @@ label {
   width: 100%;
   height: 100%;
 }
+.mainInfo__banner__interface__bottom__screenshotsIF_hidden {
+  display: none;
+}
 .mainInfo__banner__interface__bottom__medialist {
   display: flex;
   width: -moz-max-content;
@@ -2211,6 +2239,7 @@ label {
   padding-right: 10px;
 }
 .mainInfo__banner__interface__bottom__medialist__media {
+  position: relative;
   width: 140px;
   height: 82px;
   border-radius: 10px;
@@ -2224,7 +2253,47 @@ label {
 .mainInfo__banner__interface__bottom__medialist__media > * {
   width: 100%;
 }
+.mainInfo__banner__interface__bottom__medialist__media__playButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 2;
+}
+.mainInfo__banner__interface__bottom__medialist__media__playButton__icon {
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  padding: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.2s;
+}
+.mainInfo__banner__interface__bottom__medialist__media__playButton__icon > svg {
+  transform: translateX(0.5px);
+  height: 100%;
+}
 .mainInfo__banner__interface__bottom__medialist__media__screenshot {
+  width: 100%;
+  height: 100%;
+  background-size: cover; /* или contain */
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.mainInfo__banner__interface__bottom__medialist__media__preview {
+  position: relative;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background-size: cover; /* или contain */
@@ -2245,6 +2314,10 @@ label {
 }
 .mainInfo__banner__interface__bottom__medialist__media_active:active {
   transform: scale(1);
+}
+.mainInfo__banner__interface__bottom__medialist__media_active .mainInfo__banner__interface__bottom__medialist__media__playButton__icon {
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
 }
 .mainInfo__banner__interface:hover {
   background-color: rgba(0, 0, 0, 0.3);
@@ -2470,6 +2543,41 @@ label {
 .mainInfo__info__interactions__buttonBuy .-text {
   font-size: 26px;
   font-weight: 600;
+}
+.mainInfo__info__about {
+  margin-top: 10px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+.mainInfo__info__about__point {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  padding: 5px 8px;
+}
+.mainInfo__info__about__point__key {
+  color: rgb(200, 200, 200);
+  margin-right: 15px;
+}
+.mainInfo__info__about__point__value {
+  display: flex;
+  justify-content: end;
+}
+.mainInfo__info__about__point__value_link {
+  display: flex;
+  transition: 0.15s;
+  cursor: pointer;
+}
+.mainInfo__info__about__point__value_link:hover {
+  color: rgb(1, 162, 255);
+}
+.mainInfo__info__about__point:nth-child(2n) {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 .mainInfo__info_loading .mainInfo__info__title {
   height: 26px;
@@ -2827,7 +2935,7 @@ label {
 
 .fullScreen {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
@@ -2836,18 +2944,167 @@ label {
   background-color: rgba(0, 0, 0, 0.7);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
-  cursor: pointer;
   transition: 0.2s;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  flex-direction: column;
 }
-.fullScreen > img {
+.fullScreen__imgBlock {
+  padding: 10px;
+  padding-bottom: 0;
+  height: calc(100% - 100px);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.fullScreen__imgBlock > img {
+  cursor: pointer;
+  border-radius: 10px;
   animation: open 0.3s cubic-bezier(0, 0, 0, 0.75) 1;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
+.fullScreen__buttons {
+  height: 100px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.fullScreen__buttons__arrow {
+  width: 45px;
+  height: 45px;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  border-radius: 50%;
+  transition: 0.15s;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
+  cursor: pointer;
+}
+.fullScreen__buttons__arrow:hover {
+  background-color: rgba(1, 162, 255, 0.25);
+  border: 1px solid rgba(1, 162, 255, 0.6);
+}
+.fullScreen__buttons__arrow:active {
+  transform: scale(0.95);
+}
+.fullScreen__buttons__arrow > img {
+  width: 100%;
+  filter: invert(1);
+}
+.fullScreen__buttons__arrow:nth-child(1), .fullScreen__buttons__arrow:nth-child(2) {
+  padding: 13px;
+}
+.fullScreen__buttons__arrow:nth-child(3) {
+  padding: 9px;
+}
+.fullScreen__buttons__arrow:nth-child(1) img {
+  transform: rotate(180deg) translateX(1px);
+}
+.fullScreen__buttons__arrow:nth-child(2) img {
+  transform: translateX(1px);
+}
+.fullScreen__buttons__arrow:active {
+  transform: scale(0.95);
+}
 .fullScreen_active {
   display: flex;
+}
+
+.videoIF {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 10px;
+  animation: open 0.25s cubic-bezier(0, 0, 0, 0.75) 1;
+}
+.videoIF__button {
+  height: 35px !important;
+  width: 35px !important;
+  padding: 8px;
+  background-color: rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  border-radius: 50%;
+  transition: 0.15s;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
+  cursor: pointer;
+}
+.videoIF__button:hover {
+  background-color: rgba(1, 162, 255, 0.25);
+  border: 1px solid rgba(1, 162, 255, 0.6);
+}
+.videoIF__button:active {
+  transform: scale(0.95);
+}
+.videoIF__button > svg {
+  width: 100%;
+  height: 100%;
+}
+.videoIF__race {
+  position: relative;
+  width: calc(100% - 90px);
+  height: 12px;
+  border-radius: 6px;
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+}
+.videoIF__race__mouse {
+  opacity: 0;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 6px;
+  transition: opacity 0.15s;
+}
+.videoIF__race__value {
+  position: relative;
+  z-index: 1;
+  height: 100%;
+  width: 0%;
+  border-radius: 6px;
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
+}
+.videoIF__race:hover .videoIF__race__mouse {
+  opacity: 1;
+}
+.videoIF__playButton > ._pause {
+  display: none;
+}
+.videoIF__playButton > ._play {
+  display: block;
+}
+.videoIF__playButton_pause > ._pause {
+  display: block;
+}
+.videoIF__playButton_pause > ._play {
+  display: none;
+}
+.videoIF_hidden {
+  display: none;
 }
 
 .profile {
