--- a/scss/elements/index/_banner.scss
+++ b/scss/elements/index/_banner.scss
@@ -108,9 +108,9 @@
                             flex-direction: column;
                             gap: 0px;
                             &__newPrice {
-                                font-size: 22px;
+                                font-size: 26px;
                                 font-weight: 700;
-                                // border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+                                margin-top: -2px;
                             }
                             &__oldPrice {
                                 font-size: 16px;
@@ -148,5 +148,4 @@
             }
         }
     }
-    
 }
