--- a/scss/elements/game_card/_mainInfo.scss
+++ b/scss/elements/game_card/_mainInfo.scss
@@ -33,18 +33,11 @@
                 background-size: cover; /* или contain */
                 background-position: center;
                 background-repeat: no-repeat;
-                // & img {
-                //     // min-width: 100%;
-                //     max-width: 100%;
-                //     min-height: 100%;
-                //     // max-height: 100%;
-                //     // min-height: 100%;
-                // }
             }
             & > video {
-                background-size: contain; 
-                background-position: center;
-                background-repeat: no-repeat;
+                // background-size: contain; 
+                // background-position: center;
+                // background-repeat: no-repeat;
                 width: 100%;
                 height: 100%;
             }
