--- a/css/main.css
+++ b/css/main.css
@@ -1997,6 +1997,8 @@ label {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 .bigImgBlock img {
+  position: relative;
+  z-index: 1;
   width: 100%;
 }
 .bigImgBlock_loading {
@@ -2021,21 +2023,119 @@ label {
   display: flex;
   align-content: flex-start;
   justify-content: center;
-  gap: 20px;
+  gap: 10px;
   flex-wrap: wrap;
   margin-bottom: 20px;
   transform: translateY(0px) scale(1);
   opacity: 1;
   transition: 0.2s;
 }
+.mainInfo__left {
+  width: 700px;
+}
+.mainInfo__title {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  text-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+}
+.mainInfo__interaction {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: rgba(50, 50, 50, 0.75);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+}
+.mainInfo__interaction__button {
+  height: 60px;
+  width: 60px;
+  padding: 10px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
+  cursor: pointer;
+}
+.mainInfo__interaction__button:hover {
+  background-color: rgba(1, 162, 255, 0.25);
+  border: 1px solid rgba(1, 162, 255, 0.6);
+}
+.mainInfo__interaction__button:active {
+  transform: scale(0.95);
+}
+.mainInfo__interaction__button > img {
+  height: 100%;
+  filter: invert(1);
+}
+.mainInfo__interaction__button_fav {
+  padding: 9px;
+}
+.mainInfo__interaction__button_basket {
+  padding: 13px;
+}
+.mainInfo__interaction__button_buy {
+  width: auto;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: 700;
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
+}
+.mainInfo__interaction__prices {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: center;
+}
+.mainInfo__interaction__prices__old {
+  text-decoration: line-through;
+  font-size: 16px;
+  color: rgb(200, 200, 200);
+}
+.mainInfo__interaction__prices__new {
+  font-weight: 700;
+  font-size: 24px;
+}
+.mainInfo__interaction__discount {
+  font-size: 20px;
+  font-weight: 700;
+  height: 60px;
+  width: 75px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+}
+.mainInfo__interaction__left {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.mainInfo__interaction__right {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 .mainInfo__banner {
   position: relative;
-  width: 700px;
   height: 400px;
   overflow: hidden;
   border-radius: 20px;
   box-shadow: 0 0 25px -5px rgba(0, 0, 0, 0.3);
   border: 1px solid rgba(255, 255, 255, 0.15);
+  margin-bottom: 10px;
 }
 .mainInfo__banner__visual {
   position: relative;
@@ -2337,11 +2437,10 @@ label {
   display: none;
 }
 .mainInfo__info {
-  width: 500px;
+  width: 400px;
   align-self: flex-end;
   border-radius: 20px;
-  padding: 20px;
-  padding-top: 12px;
+  padding: 15px;
   background-color: rgba(50, 50, 50, 0.75);
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
@@ -2349,11 +2448,16 @@ label {
   backdrop-filter: blur(10px);
   box-shadow: 0 0 25px -5px rgba(0, 0, 0, 0.3);
 }
-.mainInfo__info__title {
-  font-size: 30px;
-  font-weight: 600;
-  margin-bottom: 5px;
-  max-width: 100%;
+.mainInfo__info__img {
+  width: 100%;
+}
+.mainInfo__info__img > img {
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+.mainInfo__info__smallDescription {
+  margin-bottom: 10px;
 }
 .mainInfo__info__category {
   display: flex;
@@ -2427,124 +2531,6 @@ label {
 .mainInfo__info__category__point > span {
   color: rgb(200, 200, 200);
   margin-right: 5px;
-}
-.mainInfo__info__interactions {
-  margin-top: 20px;
-}
-.mainInfo__info__interactions__top {
-  display: flex;
-  gap: 12px;
-  height: 70px;
-  margin-bottom: 12px;
-}
-.mainInfo__info__interactions__bottom {
-  display: flex;
-  gap: 12px;
-  height: 70px;
-}
-.mainInfo__info__interactions__percent {
-  width: 108px;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  border-radius: 15px;
-  font-size: 26px;
-  font-weight: 600;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
-}
-.mainInfo__info__interactions__price {
-  flex-grow: 1;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 15px;
-  font-size: 26px;
-  font-weight: 600;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
-}
-.mainInfo__info__interactions__price span {
-  color: #A7A7A7;
-  margin-left: 5px;
-}
-.mainInfo__info__interactions__price span:nth-child(2) {
-  font-size: 16px;
-  transform: translateY(3px);
-  text-decoration: line-through;
-}
-.mainInfo__info__interactions__button {
-  height: 100%;
-  width: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 15px;
-  cursor: pointer;
-  transition: 0.15s;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
-  transition: 0.2s;
-  cursor: pointer;
-}
-.mainInfo__info__interactions__button:hover {
-  background-color: rgba(1, 162, 255, 0.25);
-  border: 1px solid rgba(1, 162, 255, 0.6);
-}
-.mainInfo__info__interactions__button:active {
-  transform: scale(0.95);
-}
-.mainInfo__info__interactions__button img {
-  height: 38px;
-  filter: invert(1);
-}
-.mainInfo__info__interactions__buttonBuy {
-  flex-grow: 1;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 15px;
-  position: relative;
-  background: linear-gradient(to bottom, rgb(1, 162, 255), rgb(1, 74, 255));
-  cursor: pointer;
-  transition: 0.15s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.mainInfo__info__interactions__buttonBuy .-forHover {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  z-index: 2;
-  opacity: 0;
-  border-radius: inherit;
-  background: rgb(1, 162, 255);
-  transition: 0.15s;
-}
-.mainInfo__info__interactions__buttonBuy .-text {
-  position: relative;
-  z-index: 3;
-  cursor: pointer;
-}
-.mainInfo__info__interactions__buttonBuy:hover .-forHover {
-  opacity: 1;
-}
-.mainInfo__info__interactions__buttonBuy:active {
-  transform: scale(0.98);
-}
-.mainInfo__info__interactions__buttonBuy .-text {
-  font-size: 26px;
-  font-weight: 600;
 }
 .mainInfo__info__about {
   margin-top: 10px;
