--- a/scss/elements/game_card/_bigImgBlock.scss
+++ b/scss/elements/game_card/_bigImgBlock.scss
@@ -25,8 +25,23 @@
     //     left: 0;
     // }
     & img {
+        position: relative;
+        z-index: 1;
         width: 100%;
     }
+    // &__title {
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: center;
+    //     position: absolute;
+    //     top: 125px;
+    //     left: 0;
+    //     right: 0;
+    //     z-index: 2;
+    //     font-size: 58px;
+    //     text-shadow: 0 0 20px rgba(0, 0, 0, 1);
+    //     font-weight: 700;
+    // }
     &_loading {
         background-color: rgb(55, 55, 55);
     }
