--- a/css/main.css
+++ b/css/main.css
@@ -166,7 +166,7 @@ label {
 }
 .inner_catalog {
   padding-top: 100px;
-  width: 1605px;
+  width: 1405px;
 }
 
 .header {
@@ -1123,32 +1123,27 @@ label {
 }
 
 .inputList {
-  height: 50px;
+  height: 40px;
   position: relative;
   z-index: 2;
+  width: 100%;
 }
 .inputList input {
   display: block;
   box-sizing: border-box;
-  height: 50px;
+  height: 40px;
   width: 100%;
-  border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
-  padding-left: 17px;
-  font-size: 16px;
+  border-radius: 12px;
+  font-size: 14px;
   outline: none;
   cursor: text;
   transition: 0.1s;
 }
-.inputList input:focus {
-  background-color: rgba(1, 162, 255, 0.25);
-  border: 1px solid rgba(1, 162, 255, 0.6);
-}
 .inputList > input {
   position: relative;
   z-index: 1;
+  background: none;
+  visibility: hidden;
 }
 .inputList__list {
   position: absolute;
@@ -1161,30 +1156,68 @@ label {
 .inputList__list__header {
   position: relative;
   z-index: 2;
-  height: 50px;
+  height: 40px;
   cursor: pointer;
   background-color: transparent;
   transition: 0.2s;
-  border-radius: 15px;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  padding-left: 12px;
+  gap: 5px;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  background-color: rgb(61, 61, 61);
+}
+.inputList__list__header__title {
+  position: relative;
+  z-index: 3;
+  font-size: 14px;
+  cursor: pointer;
+  min-width: -moz-max-content;
+  min-width: max-content;
+}
+.inputList__list__header__values {
+  position: relative;
+  font-size: 14px;
+  color: rgb(1, 162, 255);
+  z-index: 1;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  cursor: pointer;
+}
+.inputList__list__header__bg {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
   display: flex;
   align-items: center;
   justify-content: end;
   padding-right: 12px;
+  background: linear-gradient(to right, transparent 60%, rgb(61, 61, 61) 80%);
 }
-.inputList__list__header > svg {
+.inputList__list__header__bg > svg {
+  position: relative;
   height: 24px;
   transform: rotate(90deg);
   transition: 0.2s;
+  z-index: 3;
 }
 .inputList__list__header:hover {
-  background-color: rgba(255, 255, 255, 0.07);
+  background-color: rgb(70, 70, 70);
 }
 .inputList__list__body {
   display: none;
   position: relative;
   z-index: 1;
   width: 100%;
-  border-radius: 0px 0px 15px 15px;
+  border-radius: 0px 0px 12px 12px;
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
@@ -1202,10 +1235,17 @@ label {
   margin-bottom: 5px;
 }
 .inputList__list__body__search > input {
-  height: 40px;
+  height: 35px;
   font-size: 14px;
   border-radius: 10px;
   padding-left: 14px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+}
+.inputList__list__body__search > input:focus {
+  background-color: rgba(1, 162, 255, 0.25);
+  border: 1px solid rgba(1, 162, 255, 0.6);
 }
 .inputList__list__body__points {
   display: flex;
@@ -1231,21 +1271,21 @@ label {
 }
 .inputList__list__body__points__point {
   position: relative;
-  padding-left: 10px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  border-radius: 10px;
+  padding-left: 8px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 8px;
   cursor: pointer;
   transition: 0.15s;
 }
 .inputList__list__body__points__point__checkBlock {
   position: absolute;
   z-index: 1;
-  left: -10px;
+  left: -8px;
   top: 50%;
   transform: translateY(-50%);
   width: 4px;
-  height: 24px;
+  height: 20px;
   border-radius: 5px;
   opacity: 0;
   transition: 0.2s;
@@ -1260,6 +1300,7 @@ label {
   display: block;
   transition: 0.15s;
   transition-timing-function: cubic-bezier(0, 0, 0, 0.75);
+  font-size: 14px;
 }
 .inputList__list__body__points__point:hover {
   background-color: rgba(255, 255, 255, 0.1);
@@ -1275,7 +1316,7 @@ label {
   left: 5px;
 }
 .inputList_open .inputList__list__header {
-  border-radius: 15px 15px 0px 0px;
+  border-radius: 12px 12px 0px 0px;
 }
 .inputList_open .inputList__list__header > svg {
   transform: rotate(270deg);
@@ -1287,7 +1328,7 @@ label {
   z-index: 4;
 }
 .inputList_open > input {
-  border-radius: 15px 15px 0px 0px;
+  border-radius: 12px 12px 0px 0px;
 }
 
 .carousel {
@@ -2457,6 +2498,7 @@ label {
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
 .mainInfo__info__smallDescription {
+  font-size: 15px;
   margin-bottom: 10px;
 }
 .mainInfo__info__category {
@@ -2517,7 +2559,7 @@ label {
   cursor: pointer;
   border-radius: 13px;
   padding: 3px 10px;
-  font-size: 14px;
+  font-size: 13px;
   text-align: center;
   cursor: pointer;
 }
@@ -3796,8 +3838,84 @@ label {
 
 .formFilters {
   position: relative;
-  display: grid;
-  grid-gap: 15px;
-  grid-template-columns: repeat(5, minmax(0px, 1fr));
   margin-bottom: 50px;
+}
+.formFilters__row {
+  width: 100%;
+  display: flex;
+  gap: 20px;
+}
+.formFilters__row > * {
+  width: 100%;
+}
+.formFilters__row_sub {
+  margin-top: 20px;
+}
+.formFilters__menuButtons {
+  height: 40px;
+  display: flex;
+  gap: 10px;
+}
+.formFilters__menuButtons__allFilters {
+  border-radius: 12px;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  width: 100%;
+}
+.formFilters__menuButtons__allFilters:hover {
+  background-color: rgba(1, 162, 255, 0.25);
+  border: 1px solid rgba(1, 162, 255, 0.6);
+}
+.formFilters__menuButtons__allFilters:active {
+  transform: scale(0.95);
+}
+.formFilters__menuButtons__allFilters > svg {
+  height: 25px;
+}
+.formFilters__menuButtons__allFilters > span {
+  font-size: 14px;
+}
+.formFilters__menuButtons__reset {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  width: 70px;
+  transition: 0.15s;
+}
+.formFilters__menuButtons__reset:hover {
+  color: rgb(1, 162, 255);
+}
+.formFilters__sortingBlock {
+  height: 40px;
+  display: flex;
+}
+.formFilters__sortingBlock__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+}
+.formFilters__sortingBlock__icon__svg {
+  height: 24px;
+}
+.formFilters__sortingBlock__icon__svg_toTop > ._r_top {
+  width: 19px;
+}
+.formFilters__sortingBlock__icon__svg_toTop > ._r_bottom {
+  width: 7px;
+}
+.formFilters__sortingBlock__icon__svg_toBottom > ._r_top {
+  width: 7px;
+}
+.formFilters__sortingBlock__icon__svg_toBottom > ._r_bottom {
+  width: 19px;
 }/*# sourceMappingURL=main.css.map */
