--- a/scss/elements/catalog/_formFilters.scss
+++ b/scss/elements/catalog/_formFilters.scss
@@ -2,6 +2,77 @@
 
 .formFilters {
     position: relative;
-    @include base.grid(15px, 5);
     margin-bottom: 50px;
+    &__row {
+        width: 100%;
+        display: flex;
+        gap: 20px;
+        & > * {
+            width: 100%;
+        }
+        &_sub {
+            margin-top: 20px;
+        }
+    }
+    &__menuButtons {
+        height: 40px;
+        display: flex;
+        gap: 10px;
+        &__allFilters {
+            border-radius: 12px;
+            height: 100%;
+            @include base.style-main_click;
+            display: flex;
+            align-items: center;
+            gap: 7px;
+            width: 100%;
+            & > svg {
+                height: 25px;
+            }
+            & > span {
+                font-size: 14px;
+            }
+        }
+        &__reset {
+            height: 100%;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            width: 70px;
+            transition: .15s;
+            &:hover {
+                color: base.$clr-blue_light;
+            }
+        }
+    }
+    &__sortingBlock {
+        height: 40px;
+        &__icon {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            &__svg {
+                height: 24px;
+                &_toTop {
+                    & > ._r_top {
+                        width: 19px;
+                    }
+                    & > ._r_bottom {
+                        width: 7px;
+                    }
+                }
+                &_toBottom {
+                    & > ._r_top {
+                        width: 7px;
+                    }
+                    & > ._r_bottom {
+                        width: 19px;
+                    }
+                }
+            }
+        }
+        display: flex;
+    }
 }
