--- a/scss/default/_base.scss
+++ b/scss/default/_base.scss
@@ -12,7 +12,9 @@ $clr-red_close: rgb(170, 22, 22);
 $clr-gray_light: rgba(45, 45, 45, 1);
 
 $clr-grad_blue_0: linear-gradient(to bottom, rgba(1, 162, 255, 0), rgba(1, 74, 255, 0));
-$clr-grad_blue_100: linear-gradient(to bottom, rgba(1, 162, 255, 1), rgba(1, 74, 255, 1));
+// $clr-grad_blue_100: linear-gradient(to bottom, rgba(1, 162, 255, 1), rgba(1, 74, 255, 1));
+$clr-grad_blue_100: linear-gradient(to top, rgba(1, 162, 255, .8), rgba(1, 162, 255, .2));
+// $clr-grad_blue_100: linear-gradient(to top, rgba(1, 162, 255, .8), rgba(1, 74, 255, .3));
 $clr-grad_red: linear-gradient(to bottom, rgba(255, 73, 73, 1), rgba(167, 0, 0, 1));
 
 $clr-gray_dark: rgb(27, 27, 27);
@@ -147,6 +149,7 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 1px solid $clr-blue_light;
     & .-forHover {
         position: absolute;
         top: 0;
@@ -155,7 +158,7 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
         bottom: 0;
         z-index: 2;
         opacity: 0;
-        border-radius: inherit;
+        border-radius: calc(inherit - 1px);
         background: $clr-blue_light;
         transition: 0.15s;
     }
