--- a/scss/elements/game_card/_mainInfo.scss
+++ b/scss/elements/game_card/_mainInfo.scss
@@ -57,17 +57,21 @@
         }
         &__prices {
             display: flex;
-            flex-direction: column;
-            align-items: end;
-            justify-content: center;
+            // flex-direction: column;
+            // align-items: end;
+            // justify-content: center;
+            align-items: center;
+            justify-content: end;
+            gap: 5px;
             &__old {
                 text-decoration: line-through;
-                font-size: 16px;
+                font-size: 20px;
                 color: rgb(200, 200, 200);
+                transform: translateY(5px);
             }
             &__new {
                 font-weight: 700;
-                font-size: 24px;
+                font-size: 32px;
             }
         }
         &__discount {
