--- a/css/main.css
+++ b/css/main.css
@@ -1302,6 +1302,7 @@ label {
   border-radius: 8px;
   cursor: pointer;
   transition: 0.15s;
+  border: 1px solid transparent;
 }
 .inputList__list__body__points__point__checkBlock {
   position: absolute;
@@ -1342,6 +1343,15 @@ label {
 .inputList__list__body__points__point_check .inputList__list__body__points__point__checkBlock {
   opacity: 1;
   left: 5px;
+}
+.inputList__list__body__points__point_active {
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
+  cursor: default;
+}
+.inputList__list__body__points__point_active:hover {
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
 }
 .inputList__list__body__button {
   width: 100%;
@@ -2027,7 +2037,7 @@ label {
   z-index: 2;
   opacity: 0;
   border-radius: calc(inherit - 1px);
-  background: rgb(1, 162, 255);
+  background: linear-gradient(to top, rgb(1, 162, 255), rgba(1, 162, 255, 0.5));
   transition: 0.15s;
 }
 .miniGameCard__right__buttonBuy .-text {
@@ -3133,9 +3143,17 @@ label {
   width: 100%;
   height: 100%;
 }
+.videoIF__raceBlock {
+  width: calc(100% - 245px);
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  height: 35px;
+  justify-content: center;
+}
 .videoIF__race {
   position: relative;
-  width: calc(100% - 245px);
+  width: 100%;
   height: 12px;
   border-radius: 6px;
   -webkit-backdrop-filter: blur(3px);
@@ -3166,6 +3184,32 @@ label {
   background-color: rgba(1, 162, 255, 0.4);
   border: 1px solid rgb(1, 162, 255);
   border: none;
+}
+.videoIF__race__time {
+  position: relative;
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+.videoIF__race__time__point {
+  font-size: 12px;
+}
+.videoIF__race__time__point_hover {
+  position: absolute;
+  padding: 2px 5px;
+  border-radius: 5px;
+  left: 50%;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  opacity: 0;
+  transition: opacity 0.15s;
+  transform: translateX(-50%);
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+}
+.videoIF__race__time__point_hover_active {
+  opacity: 1;
 }
 .videoIF__race:hover .videoIF__race__mouse {
   opacity: 1;
@@ -3573,7 +3617,7 @@ label {
   z-index: 2;
   opacity: 0;
   border-radius: calc(inherit - 1px);
-  background: rgb(1, 162, 255);
+  background: linear-gradient(to top, rgb(1, 162, 255), rgba(1, 162, 255, 0.5));
   transition: 0.15s;
 }
 .settings__buttons__button_save .-text {
