--- a/scss/default/_base.scss
+++ b/scss/default/_base.scss
@@ -14,6 +14,7 @@ $clr-gray_light: rgba(45, 45, 45, 1);
 $clr-grad_blue_0: linear-gradient(to bottom, rgba(1, 162, 255, 0), rgba(1, 74, 255, 0));
 // $clr-grad_blue_100: linear-gradient(to bottom, rgba(1, 162, 255, 1), rgba(1, 74, 255, 1));
 $clr-grad_blue_100: linear-gradient(to top, rgba(1, 162, 255, .8), rgba(1, 162, 255, .2));
+$clr-grad_blue_100_2: linear-gradient(to top, rgba(1, 162, 255, 1), rgba(1, 162, 255, .5));
 // $clr-grad_blue_100: linear-gradient(to top, rgba(1, 162, 255, .8), rgba(1, 74, 255, .3));
 $clr-grad_red: linear-gradient(to bottom, rgba(255, 73, 73, 1), rgba(167, 0, 0, 1));
 
@@ -159,7 +160,7 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
         z-index: 2;
         opacity: 0;
         border-radius: calc(inherit - 1px);
-        background: $clr-blue_light;
+        background: $clr-grad_blue_100_2;
         transition: 0.15s;
     }
     & .-text {
