--- a/scss/elements/game_card/_videoIF.scss
+++ b/scss/elements/game_card/_videoIF.scss
@@ -25,9 +25,17 @@
             height: 100%;
         }
     }
+    &__raceBlock {
+        width: calc(100% - 245px);
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        height: 35px;
+        justify-content: center;
+    }
     &__race {
         position: relative;
-        width: calc(100% - 245px);
+        width: 100%;
         height: 12px;
         border-radius: 6px;
         -webkit-backdrop-filter: blur(3px);
@@ -54,6 +62,30 @@
             border-radius: 6px;
             @include base.style-main_active;
             border: none;
+        }
+        &__time {
+            position: relative;
+            display: flex;
+            align-items: end;
+            justify-content: space-between;
+            &__point {
+                font-size: 12px;
+                &_hover {
+                    position: absolute;
+                    padding: 2px 5px;
+                    border-radius: 5px;
+                    left: 50%;
+                    -webkit-backdrop-filter: blur(10px);
+                    backdrop-filter: blur(10px);
+                    opacity: 0;
+                    transition: opacity .15s;
+                    transform: translateX(-50%);
+                    @include base.style-main;
+                    &_active {
+                        opacity: 1;
+                    }
+                }
+            }
         }
         &:hover &{
             &__mouse {
